# cv

./: .gitignore  Dockerfile  README.md  contents.py  contents.yml  create_cv.py  cv.css  generate.py  pyproject.toml
.github/workflows/: deploy.yml  generate.yml  main.yml  release.yml
cv/: contents.py  generate.py
templates/: cv_template.html
templates/assets/: cv.css  styles.css
