[project]
name = "cv"
version = "2025"
description = "Bespoke CV generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.5",
    "typer>=0.15.1",
    "weasyprint>=63.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
]
