[project]
name = "cv"
version = "2026.1"
description = "Bespoke CV generator"
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
    "weasyprint>=68.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.14.14"]
